# diaspora-stream-api

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  COPYRIGHT  README.md  pyproject.toml  requirements.txt  spack.yaml
.github/workflows/: codecov.yml  codeql.yml  pip.yml  test.yml
benchmarks/: CMakeLists.txt  RandomBackend.hpp  diaspora-consumer-benchmark.cpp  diaspora-producer-benchmark.cpp
docs/: conf.py  index.rst  requirements.txt
docs/_code/: CMakeLists.txt  consumer.cpp  consumer.py  energy_partition_selector.cpp  energy_serializer.cpp  energy_topic.cpp  energy_topic.py  energy_topic.sh  energy_validator.cpp  forward_cross_driver.toml  forward_cross_driver.yaml  forward_local.toml  forward_local.yaml  forward_plugins.toml  forward_plugins.yaml  producer.cpp  producer.py
docs/usage/: benchmarks.rst  consumer.rst  drivers.rst  forwarding.rst  installation.rst  producer.rst  quickstart.rst  topics.rst  utilities.rst
include/diaspora/: Archive.hpp  ArgobotsThreadPool.hpp  ArgsUtil.hpp  BatchParams.hpp  BufferWrapperArchive.hpp  Consumer.hpp  DataAllocator.hpp  DataDescriptor.hpp  DataSelector.hpp  DataView.hpp  Driver.hpp  Event.hpp  EventID.hpp  EventProcessor.hpp  Exception.hpp  Factory.hpp  ForwardDcl.hpp  Future.hpp  InvalidMetadata.hpp  Json.hpp  Metadata.hpp  NumEvents.hpp  Ordering.hpp  PartitionSelector.hpp  PosixThreadPool.hpp  Producer.hpp  Serializer.hpp  Statistics.hpp  ThreadPool.hpp  TopicHandle.hpp  Validator.hpp
include/mofka/: Archive.hpp  ArgsUtil.hpp  BatchParams.hpp  BufferWrapperArchive.hpp  Consumer.hpp  DataAllocator.hpp  DataBroker.hpp  DataDescriptor.hpp  DataSelector.hpp  DataView.hpp  Driver.hpp  Event.hpp  EventProcessor.hpp  Exception.hpp  Factory.hpp  ForwardDcl.hpp  Future.hpp  InvalidMetadata.hpp  Json.hpp  Metadata.hpp  NumEvents.hpp  Ordering.hpp  PartitionSelector.hpp  Producer.hpp  Serializer.hpp  Statistics.hpp  ThreadPool.hpp  TopicHandle.hpp  Validator.hpp
python/: CMakeLists.txt  py-diaspora-stream-api.cpp  py-mofka-api.cpp
python/diaspora_stream/: api.py  test_concurrent_producer_consumer.py  test_consumer.py  test_data_descriptor.py  test_driver.py  test_driver_factory.py  test_partition_selector.py  test_producer.py  test_serializer.py  test_topic_handle.py  test_validator.py
python/diaspora_stream/fifo/: __init__.py  __main__.py
python/mochi/mofka/: api.py  test_consumer.py  test_data_descriptor.py  test_driver.py  test_driver_factory.py  test_partition_selector.py  test_producer.py  test_serializer.py  test_topic_handle.py  test_validator.py
python/pybind11_json/: pybind11_json.hpp
src/: CMakeLists.txt  Consumer.cpp  DataDescriptor.cpp  DataDescriptorImpl.hpp  DataView.cpp  DataViewImpl.hpp  DefaultPartitionSelector.hpp  DefaultSerializer.hpp  DefaultValidator.hpp  EventbridgeValidator.cpp  EventbridgeValidator.hpp  Factory.cpp  JsonUtil.hpp  MetadataImpl.hpp  PartitionSelector.cpp  PimplUtil.hpp  Producer.cpp  SchemaSerializer.hpp  SchemaValidator.hpp  Serializer.cpp  ThreadPool.cpp  TopicHandle.cpp  Validator.cpp  VariantUtil.hpp  diaspora-stream-api-config.cmake.in  diaspora-stream-api.pc.in  mofka-api-config.cmake.in  mofka-api.pc.in
src/files-driver/: BufferPool.cpp  BufferPool.hpp  ComponentSerializer.cpp  ComponentSerializer.hpp  Config.cpp  Config.hpp  Consumer.cpp  Consumer.hpp  Driver.cpp  Driver.hpp  Event.hpp  FutureState.hpp  IndexCache.cpp  IndexCache.hpp  PartitionFiles.cpp  PartitionFiles.hpp  Producer.cpp  Producer.hpp  TopicHandle.cpp  TopicHandle.hpp  WriteBatch.hpp
tests/: ArgobotsThreadPoolTest.cpp  BackendTest.cpp  CMakeLists.txt  ConcurrentProducerConsumerTest.cpp  ConsumerTest.cpp  DataSelectionTest.cpp  DriverTest.cpp  EventConsumerTest.cpp  EventProducerTest.cpp  EventbridgeTest.cpp  MetadataTest.cpp  MyTest.cpp  PosixThreadPoolTest.cpp  ProducerTest.cpp  SimpleBackend.hpp  diaspora-run-tests.sh  files-driver-run-benchmark.sh  spack.yaml  test-diaspora-ctl-common.sh  test-diaspora-ctl-fifo.sh  test-diaspora-ctl-forward.sh  test-diaspora-ctl.sh
tests/python/: CMakeLists.txt  SimpleBackend.cpp
