[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mofka-api"
version = "0.1.0"
description = "Python bindings for the diaspora-streamin-api C++ library"
authors = [{ name = "Matthieu Dorier", email = "mdorier@anl.gov" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[tool.scikit-build]
wheel.packages = ["python/mochi"]
wheel.install-dir = "mofka_api"
build-dir = "build"
cmake.minimum-version = "3.15"
cmake.args = ["-DENABLE_PYTHON=ON"]
